made modal backdrop z-index -1 to fix positioning issue

--- a/css/style.css
+++ b/css/style.css
@@ -805,3 +805,8 @@ body.is-preload #wrapper.fade-in:before {
     }
 
 }
+
+
+.modal-backdrop{
+    z-index: 0;
+}
